objects/LBI__LatticeCalculatedFieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Calculated Field Mappings</relationshipLabel>
        <relationshipName>LatticeCalculatedFieldMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__MappingName__c</fullName>
        <label>Mapping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Lattice Calculated Field Mapping</label>
    <nameField>
        <displayFormat>LCFM-{000000}</displayFormat>
        <label>Lattice Calculated Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Calculated Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>